--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,6 +2,8 @@ name: Build and Release
 
 on:
   push:
+    branches:
+      - master
     tags:
       - "*"
   workflow_dispatch:
@@ -53,6 +55,7 @@ jobs:
         run: |
           DEBIAN_FRONTEND=noninteractive sudo apt-get install -y ccache gettext libncurses5-dev xsltproc p7zip-full
       - name: Create Directories
+        # language=bash
         run: |
           CACHE_DIR_SDK="$(eval echo "$CACHE_DIR/sdk")"
           CACHE_DIR_DL="$(eval echo "$CACHE_DIR/dl")"
@@ -68,6 +71,7 @@ jobs:
           echo "CACHE_DIR_FEEDS=$CACHE_DIR_FEEDS" >> $GITHUB_ENV
           echo "SDK_HOME=$(mktemp -d)" >> $GITHUB_ENV
       - name: Download and Unzip SDK
+        # language=bash
         run: |
           cd "$CACHE_DIR_SDK"
           if ! ( wget -q -O - "$SDK_URL_PATH/sha256sums" | grep -- "$SDK_NAME" > sha256sums.small 2>/dev/null ) ; then
@@ -84,7 +88,7 @@ jobs:
           fi
           cd -
           file "$CACHE_DIR_SDK/$SDK_FILE"
-          7z x "$CACHE_DIR_SDK/$SDK_FILE" -so | tar -C "$SDK_HOME" -xvf - --strip=1
+          tar -C "$SDK_HOME" --zstd -xvf $CACHE_DIR_SDK/$SDK_FILE --strip=1
           cd "$SDK_HOME"
           test -d "dl" && rm -rf "dl" || true
           test -d "feeds" && rm -rf "feeds" || true
@@ -97,6 +101,7 @@ jobs:
           sed -i 's#git.openwrt.org/feed/telephony#github.com/openwrt/telephony#' feeds.conf
           cd -
       - name: Update and Install Packages
+        # language=bash
         run: |
           cd "$SDK_HOME"
           ./scripts/feeds update -a
@@ -104,6 +109,7 @@ jobs:
           ./scripts/feeds install -a
           cd -
       - name: Build Packages
+        # language=bash
         run: |
           cd "$SDK_HOME"
           make defconfig
@@ -111,6 +117,7 @@ jobs:
           find "$SDK_HOME/bin/" -type f -name "*.ipk" -exec ls -lh {} \;
           cd -
       - name: Copy Bin Files
+        # language=bash
         run: |
           find "$SDK_HOME/bin/" -type f -name "${PACKAGE_NAME}*.ipk" -exec cp {} "${{ github.workspace }}" \;
           find "${{ github.workspace }}" -type f -name "*.ipk" -exec ls -lh {} \;
